# Crystal-Clear-Optimizer

./: README.md  agent.js  index.html  metadata.json  server.ts
.github/workflows/: tauri-build.yml
distribucion/: GUIA_VENTAS_Y_EMPAQUETADO.md  electron-builder.yml  tauri.conf.json
distribucion/scripts/: generador-claves.js  test-runner.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: Crystal.tsx  DiagnosticSuite.tsx  InstallersPanel.tsx  LicensingManager.tsx  MemoryChart.tsx  OptimizerDashboard.tsx  PricingTiers.tsx  SecurityPanel.tsx  SettingsPanel.tsx
