[package]
name = "crystal-clear-optimizer"
version = "1.0.0"
description = "Crystal Clear Optimizer & Security Core"
authors = ["Crystal Clear Team"]
license = "MIT"
repository = "https://github.com/crystalclear/optimizer"
default-run = "crystal-clear-optimizer"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
sysinfo = "0.29"

[features]
# by default tauri system-tray is not enabled, feel free to add features here
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
